# test-task-whoosh

./: .gitignore  README.md  pyproject.toml
app/: __main__.py  merger.py  show_mem.py
