[tool.poetry]
name = "test-task-whoosh"
version = "0.1.0"
description = ""
authors = ["TeaDove <peter.ibragimov@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
numpy = "^1.21.2"
loguru = "^0.5.3"
psutil = "^5.8.0"
tqdm = "^4.62.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
